--- a/Angular/my-app/src/app/components/product/product.component.html
+++ b/Angular/my-app/src/app/components/product/product.component.html
@@ -1,8 +1,9 @@
+<button (click)="changeData()">Update Data</button>
 <div style="width: 300px;height: 300px; margin: 100px;">
     <img class="center" [src]="data.productImage" style="height: 200px; width: 200px;">
     <h4 class="center">{{data.productName | uppercase }}</h4>
-    <h5 class="center">{{data.productPrice | conversion : code | currency : code}}</h5>
-    <h5 class="center">{{data.productPrice | discount : data.productSalePrice}}</h5>
+    <app-product-price [price]="data.productPrice" [sellingPrice]="data.productSalePrice" [code]="data3" class="center"></app-product-price>  
+    <h5 class="center">{{data.productSalePrice | discount : data.productPrice}}</h5>
 
     <!-- condition statement use *ngIf="condition" -->
     <button (click)="notifyParent($event)" class="center" *ngIf="data.productStock > 0;else stock">Add to cart</button>
