Basic of services

--- a/Angular/my-app/src/app/components/product/product.component.html
+++ b/Angular/my-app/src/app/components/product/product.component.html
@@ -1,12 +1,12 @@
-<button (click)="changeData()">Update Data</button>
-<div style="width: 300px;height: 300px; margin: 100px;">
-    <img class="center" [src]="data.productImage" style="height: 200px; width: 200px;">
-    <h4 class="center">{{data.productName | uppercase }}</h4>
+<!-- <button (click)="changeData()">Update Data</button> -->
+<div class="shadow p-4">
+    <img class="center" [src]="data.productImage" class="img-thumbnail">
+    <h4 class="fs-6">{{data.productName | uppercase }}</h4>
     <app-product-price [price]="data.productPrice" [sellingPrice]="data.productSalePrice" [code]="data3" class="center"></app-product-price>  
     <h5 class="center">{{data.productSalePrice | discount : data.productPrice}}</h5>
 
     <!-- condition statement use *ngIf="condition" -->
-    <button (click)="notifyParent($event)" class="center" *ngIf="data.productStock > 0;else stock">Add to cart</button>
+    <button (click)="notifyParent($event)" class="w-100 btn btn-primary" *ngIf="data.productStock > 0;else stock">Add to cart</button>
 </div>
 
 <ng-template #stock>
