--- a/Angular/my-app/src/app/components/currency/currency.component.html
+++ b/Angular/my-app/src/app/components/currency/currency.component.html
@@ -1,3 +1,5 @@
-<select (change)="getSelectedCode($event)">
+<div class="d-flex flex-row-reverse p-4">
+<select (change)="getSelectedCode($event)" class="form-control-sm">
     <option *ngFor="let c of codes">{{c}}</option>
 </select>
+</div>
