Routers & Assignment On Services

--- a/Angular/my-app/src/app/app.component.html
+++ b/Angular/my-app/src/app/app.component.html
@@ -1,14 +1,30 @@
-<!-- this work because varibale and directive name are same, But for other case you have add directives and pass varibales seperatly -->
-<input type="text" placeholder="pincode" appNumberOnly>
-<br>
-<br>
-<br>
-<br>
-<input type="text" placeholder="pincode" appNumberOnly="6">
-<br>
-<br>
-<br>
-<br>
-<app-checkout></app-checkout>
-<app-currency (currencySelected)="getCode($event)"></app-currency>
-<app-product-list [data2]="code"></app-product-list>
+<!-- this work because varibale and directive name are same, But for other case you have add directives and pass varibales seperatly
+<app-github-search></app-github-search>
+
+<input type="text" placeholder="pincode" appNumberOnly />
+<br />
+<br />
+<br />
+<br />
+<input type="text" placeholder="pincode" appNumberOnly="6" />
+<br />
+<br />
+<br />
+<br /> -->
+<!-- <app-checkout></app-checkout> -->
+<!-- <app-currency (currencySelected)="getCode($event)"></app-currency> -->
+
+<ul
+  class="d-flex justify-content-around"
+  style="background-color: rgb(127, 244, 238)"
+>
+  <li><a routerLink="/">Home</a></li>
+  <li><a routerLink="/demo">Demo</a></li>
+  <li><a routerLink="/checkout">checkout</a></li>
+</ul>
+
+<div class="container-fluid bg-light">
+  <app-currency></app-currency>
+  <router-outlet></router-outlet>
+</div>
+<!-- <app-product-list></app-product-list> -->
