--- a/Angular/my-app/src/app/containers/product-list/product-list.component.html
+++ b/Angular/my-app/src/app/containers/product-list/product-list.component.html
@@ -4,7 +4,7 @@
 <!-- <div class="row"> -->
 <div class="row" *ngIf="curr$ | async as mycode">
   <!-- <div *ngFor="let item of product$ | async" class="col-md-3 p-4"> -->
-  <div *ngFor="let item of plist" class="col-md-3 p-4">
+  <div *ngFor="let item of plist | search : query" class="col-md-3 p-4">
     <app-product
       [data]="item"
       [data3]="mycode"
