--- a/Angular/my-app/src/app/user/components/login/login.component.html
+++ b/Angular/my-app/src/app/user/components/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="col-6 m-auto">
+  <form (submit)="login()" [formGroup]="loginForm" class="form-control">
+    <h3 style="text-align: center" class="mt-4">Welcome to Gainsight</h3>
+    <input
+      type="email"
+      formControlName="email"
+      class="form-control mt-4 mb-4"
+      placeholder="Email"
+    />
+    <input
+      type="password"
+      formControlName="password"
+      class="form-control mb-4"
+      placeholder="password"
+    />
+    <button type="submit" class="btn btn-success">Login</button>
+  </form>
+</div>
