--- a/Angular/my-app/src/app/components/menu/menu.component.html
+++ b/Angular/my-app/src/app/components/menu/menu.component.html
@@ -36,6 +36,11 @@
               >Checkout</a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/cart"
+              >Cart</a
+            >
+          </li>
         </ul>
         <div class="d-flex" role="search">
           <input
